--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -8,13 +8,9 @@ run-java:
 runs-on: ubuntu-latest
 steps:
 - uses: actions/checkout@v4
-- name: Set up Java
-uses: actions/setup-java@v4
+- uses: actions/setup-java@v4
 with:
-java-version: '17'
 distribution: temurin
-cache: maven
-- name: Compile
-run: javac Hello.java
-- name: Run
-run: java Hello
+java-version: '17'
+- run: javac Hello.java
+- run: java Hello
